# goit-web-hm-10

./: docker-compose.yaml  pyproject.toml
hm10/: READMI.txt  manage.py  pyproject.toml
hm10/hm10/: asgi.py  settings.py  wsgi.py
hm10/quotes/: forms.py  models.py  scraper.py  urls.py  views.py
hm10/quotes/migrations/: 0001_initial.py
hm10/quotes/static/: style.css
hm10/quotes/templates/quotes/: add_author.html  add_quote.html  author_description.html  base.html  index.html  login.html  quotes_by_tag.html  register.html  waiting.html
hm10/utils/: migration.py
