[tool.poetry]
name = "goit-web-hm-10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.2"
lxml = "^5.2.2"
urllib3 = "^2.2.1"
scrapy = "^2.11.2"
pymongo = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
